Driver home page has basic structure

--- a/RailRoadController/Views/Driver/Index.cshtml
+++ b/RailRoadController/Views/Driver/Index.cshtml
@@ -6,7 +6,18 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>RailRoadController - Driver</title>
+    <link rel="stylesheet" type="text/css" href="~/Content/RRC.css">
 </head>
 <body>
+<div class="Controls">
+    controls
+</div>
+<div class="Layout">
+    Layout
+</div>
+<div class="Functions">
+    Functions
+</div>
 </body>
 </html>
+
